[package]
name = "manage-projects"
version = "0.1.0"
authors = ["David Thureson <David.G.Thureson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../../utility/util" }
walkdir = "2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.0"
chrono = "0.4.19"